# liburl

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
include/: url.h
script/: build.sh
src/: url.c  url_get.c  url_parse.c
test/: url_test.cpp
